--- a/src/chrome/locale/de-DE/passhash.properties
+++ b/src/chrome/locale/de-DE/passhash.properties
@@ -26,3 +26,5 @@ passhashPortableMixedCaseLabel=Groß- und Kleinbuchstaben
 passhashPortableNoSpecialLabel=Keine Sonderzeichen
 passhashPortableDigitsOnlyLabel=Nur Ziffern
 passhashPortableHashWordSizeLabel=Größe
+passhashPortableSha3Label=SHA3-512 Algorithm
+passhashPortableSha3Tooltip=Automatically applied with size 27 and above
