--- a/src/chrome/locale/en-US/passhash.properties
+++ b/src/chrome/locale/en-US/passhash.properties
@@ -16,7 +16,7 @@ passhashPortableSiteTagLabel=Site Tag
 passhashPortableMasterKeyLabel=Master Key
 passhashPortableHashWordLabel=Hash Word
 passhashPortableUnmaskLabel=Unmask
-passhashPortableAcceptLabel=OK
+passhashPortableAcceptLabel=Clear
 passhashPortableBumpLabel=Bump
 passhashPortableRequirementsLabel=Requirements
 passhashPortableRestrictionsLabel=Restrictions
@@ -26,3 +26,5 @@ passhashPortableMixedCaseLabel=Mixed Case
 passhashPortableNoSpecialLabel=No Special
 passhashPortableDigitsOnlyLabel=Digits Only
 passhashPortableHashWordSizeLabel=Size
+passhashPortableSha3Label=SHA3-512 Algorithm
+passhashPortableSha3Tooltip=Automatically applied with size 27 and above
