--- a/src/chrome/locale/it-IT/passhash.properties
+++ b/src/chrome/locale/it-IT/passhash.properties
@@ -26,3 +26,5 @@ passhashPortableMixedCaseLabel=Minuscole e maiuscole
 passhashPortableNoSpecialLabel=Non speciali
 passhashPortableDigitsOnlyLabel=Solo cifre
 passhashPortableHashWordSizeLabel=Dimensione
+passhashPortableSha3Label=SHA3-512 Algorithm
+passhashPortableSha3Tooltip=Automatically applied with size 27 and above
