--- a/src/chrome/locale/en-US/passhash.properties
+++ b/src/chrome/locale/en-US/passhash.properties
@@ -5,8 +5,8 @@ passhashOptionsLabel2=<< Options
 passhashMissingSiteTag=Please provide a starting site tag.
 passhashShowPortableTitle=Show Portable Page
 passhashNotTextFieldError=Please select an input field before using Password Hasher
-passhashMarkerTip=Click for Password Hasher
-passhashUnmaskTip=Click to unmask the password
+passhashMarkerTip=Password Hasher
+passhashUnmaskTip=Show password
 passhashPortableTitle=Password Hasher
 passhashPortableSiteTagListPrompt=Select from your previously-used site tags
 passhashPortableSiteTagPrompt=Site or other name, e.g. google
