--- a/src/chrome/locale/en-US/passhash.properties
+++ b/src/chrome/locale/en-US/passhash.properties
@@ -5,7 +5,7 @@ passhashOptionsLabel2=<< Options
 passhashMissingSiteTag=Please provide a starting site tag.
 passhashShowPortableTitle=Show Portable Page
 passhashNotTextFieldError=Please select an input field before using Password Hasher
-passhashMarkerTip=Password Hasher
+passhashMarkerTip=Open Password Hasher
 passhashUnmaskTip=Show password
 passhashPortableTitle=Password Hasher
 passhashPortableSiteTagListPrompt=Select from your previously-used site tags
